feat: Req #1 - Sales team table filter
highkight matching string - change page url - Integrate vue built filter  with empoylees table - use angularjs custom filter to implement the highlight functionality - edit app router

Req#1

--- a/app/styles/_components.dashboard.scss
+++ b/app/styles/_components.dashboard.scss
@@ -17,12 +17,12 @@
 .c-dashboard {
   margin: 8px 16px;
 
-  .c-dashboard__header {
+  &__header {
     display: flex;
     justify-content: center;
   }
 
-  .c-dashboard__footer {
+  &__footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +34,8 @@
   padding: 16px 8px;
   border: 1px solid #dcdee3;
   background-color: #e5e9f1;
+  display:flex;
+  justify-content:center;
 }
 
 .c-chart__container {
@@ -42,10 +44,15 @@
 }
 
 .c-button {
-  height: 40px;
+  height: 30px;
   background-color: #0099ff;
   color: white;
-  min-width: 120px;
+  min-width: 100px;
   padding: 0 16px;
   border-radius: 4px;
+}
+
+
+.highlighted {
+  background-color: yellow; 
 }
