--- a/app/components/employees-list/employees-list.html
+++ b/app/components/employees-list/employees-list.html
@@ -8,18 +8,20 @@
     <div> About </div>
   </div>
   <div
+   
     class="c-users-list__body"
     ng-repeat="employee in EmployeesListComponentVm.employeesList track by $index">
     <div>
       <div class="c-users-list__main-info">
-        <img class="c-users-list__avatar" ng-src="{{employee.profile.avatar}}" ng-attr-alt="{{employee.profile.name}}">
-        <div>{{ employee.profile.name }}</div>
+        <img class="c-users-list__avatar" ng-src="{{employee.profile.avatar}}"
+         ng-attr-alt="{{employee.profile.name}}">
+         <div data-ng-bind-html="employee.profile.name | highlight:EmployeesListComponentVm.keyword"></div>
       </div>
     </div>
-    <div> {{ employee.email }} </div>
-    <div> {{ employee.profile.address }} </div>
+    <div> {{ employee.email  }} </div>
+    <div data-ng-bind-html="employee.profile.address | highlight:EmployeesListComponentVm.keyword"> </div>
     <div> {{ employee.start_date | date }} </div>
     <div> {{ employee.performance_index }} </div>
-    <div> {{ employee.profile.about }} </div>
+    <div data-ng-bind-html="employee.profile.about | highlight:EmployeesListComponentVm.keyword"> </div>
   </div>
 </div>
