feat: :fire: Req #2 - Performance page date filter
use Axios and Vuex to fetch team performance data - implement range date filter

--- a/app/styles/_components.dashboard.scss
+++ b/app/styles/_components.dashboard.scss
@@ -36,6 +36,14 @@
   background-color: #e5e9f1;
   display:flex;
   justify-content:center;
+  align-items:center;
+}
+
+.date__container {
+  margin-right:5px;
+  label{
+    font-weight:700;
+  }
 }
 
 .c-chart__container {
