feat: :fire: Req #4 - 404 Page in using ui-router
add 404 page - fix web.config

--- a/app/styles/_components.dashboard.scss
+++ b/app/styles/_components.dashboard.scss
@@ -60,7 +60,14 @@
   border-radius: 4px;
 }
 
-
 .highlighted {
   background-color: yellow; 
+}
+
+.d-flex {
+  display: flex;
+}
+.center {
+  justify-content:center;
+  align-items:center;
 }
