feat: :fire: (BONUS #2) Load more button
Implement the logic of the load more button - add a loader indicator to the button and disable it to prevent multiple clicks  -  no more pages to load, hide the button

--- a/app/styles/_components.dashboard.scss
+++ b/app/styles/_components.dashboard.scss
@@ -49,6 +49,9 @@
   min-width: 100px;
   padding: 0 16px;
   border-radius: 4px;
+  &:disabled {
+		background-color: #c7d8e2;
+	}
 }
 
 .highlighted {
